[gd_scene load_steps=5 format=3 uid="uid://b0qu8clk5wd6i"]

[ext_resource type="FontFile" uid="uid://dma36ayybtqgh" path="res://assets/fonts/alagard/alagard.ttf" id="1_772es"]
[ext_resource type="Script" path="res://scripts/game_over_screen.gd" id="1_yuyk3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ky6vh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2sq3y"]

[node name="Game_Over_Screen" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yuyk3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.537255)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 60

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.898039, 0.231373, 0.266667, 1)
theme_override_fonts/font = ExtResource("1_772es")
theme_override_font_sizes/font_size = 112
text = "Game Over"
horizontal_alignment = 1

[node name="Restart_Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.898039, 0.231373, 0.266667, 1)
theme_override_colors/font_pressed_color = Color(0.898039, 0.231373, 0.266667, 1)
theme_override_colors/font_focus_color = Color(0.898039, 0.231373, 0.266667, 1)
theme_override_colors/font_color = Color(0.984314, 0.572549, 0.168627, 1)
theme_override_fonts/font = ExtResource("1_772es")
theme_override_font_sizes/font_size = 96
theme_override_styles/focus = SubResource("StyleBoxEmpty_ky6vh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2sq3y")
text = "Restart"
flat = true

[node name="Menu_Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.898039, 0.231373, 0.266667, 1)
theme_override_colors/font_pressed_color = Color(0.898039, 0.231373, 0.266667, 1)
theme_override_colors/font_focus_color = Color(0.898039, 0.231373, 0.266667, 1)
theme_override_colors/font_color = Color(0.984314, 0.572549, 0.168627, 1)
theme_override_fonts/font = ExtResource("1_772es")
theme_override_font_sizes/font_size = 96
theme_override_styles/focus = SubResource("StyleBoxEmpty_ky6vh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2sq3y")
text = "Main Menu"
flat = true

[node name="Quit_Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_hover_color = Color(0.898039, 0.231373, 0.266667, 1)
theme_override_colors/font_pressed_color = Color(0.898039, 0.231373, 0.266667, 1)
theme_override_colors/font_focus_color = Color(0.898039, 0.231373, 0.266667, 1)
theme_override_colors/font_color = Color(0.984314, 0.572549, 0.168627, 1)
theme_override_fonts/font = ExtResource("1_772es")
theme_override_font_sizes/font_size = 96
theme_override_styles/focus = SubResource("StyleBoxEmpty_ky6vh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_2sq3y")
text = "Quit"
flat = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/Restart_Button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Menu_Button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit_Button" to="." method="_on_quit_button_pressed"]
